fixing up some alignment things.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,7 +14,7 @@ html, body{
   margin-right: auto;
 }
 #column {
-  /*background-color: #FFFFFF;*/
+  /* if you want a background color, you can put it in both here adn container to get it to work correctly. */
 }
 #navigation {
   float: left;
@@ -23,14 +23,17 @@ html, body{
 }
 #navbar {
   width:100px;
-  margin-left:auto;
-  margin-right:auto;
+  float:right;
+  background-color:
+}
+.navtitle {
+  margin-left:-55px;
 }
 .navbutton {
-  margin-left: 55px;
 }
 #content {
   float: right;
+  margin-top: 50px;
   width: 50%;
 }
 #header {
